Add swagger API docs
