# internal/dto/record.go
@@ -5,16 +5,16 @@ import (
 )
 
 type CreateRecordRequest struct {
-	Url         string `json:"url"          validate:"required"`
-	DisplayName string `json:"display_name" validate:"required"`
-	Description string `json:"description"`
+	Url         string `json:"url"          validate:"required" example:"/url"`
+	DisplayName string `json:"display_name" validate:"required" example:"name"`
+	Description string `json:"description"  example:"This is description"`
 }
 
 type UpdateRecordRequest struct {
-	ID          int64  `json:"id,omitempty" param:"id" validate:"required"`
-	Url         string `json:"url"          validate:"required"`
-	DisplayName string `json:"display_name" validate:"required"`
-	Description string `json:"description"`
+	ID          int64  `json:"id,omitempty" param:"id" validate:"required" example:"1"`
+	Url         string `json:"url"          validate:"required" example:"/url"`
+	DisplayName string `json:"display_name" validate:"required" example:"name"`
+	Description string `json:"description"  example:"This is a description"`
 }
 
 type DeleteRecordRequest struct {
